--- a/my_html.html
+++ b/my_html.html
@@ -1,3 +1,9 @@
+---
+layout: default
+title: About
+permalink: /experiment/
+---
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -16,7 +22,7 @@
         <ol><!--ordered list, 1,2,3,4 --><li>item1</li></ol>
 
         <li><!--combined with the ul and ol--></li>
-        <a href = "https://www/w3schools.com/" target = "_blank">thislink<!--hyperlink: target=_blank为打开新窗口 --></a>
+        <a href = "https://www.w3schools.com/" target = "_blank">thislink<!--hyperlink: target=_blank为打开新窗口 --></a>
 
         <img><!--insert an image in this position-->
 
