--- a/my_html.html
+++ b/my_html.html
@@ -20,7 +20,9 @@ title: experiment
         <ul class="box common">
             <li id="john">John</li>
             <li id="peter">Peter</li>
-        </ul>     
+        </ul>
+        
+        <a href = "https://datascience.nih.gov/covid-19-open-access-resources#computational", target = "_blank">COVID DATA</a>
 
         <!--这段javascript的文件import应该放在最后面： 因为js的code要去操作前面的内容-->
         <script src = "main.js"></script>
