--- a/my_html.html
+++ b/my_html.html
@@ -18,10 +18,13 @@ title: experiment
         <script src="https://unpkg.com/react-dom@16.13.0/umd/react-dom.production.min.js"></script>
         <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 
+
         <!--babel import-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
 
-        
+        <meta charset="UTF-8">
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     </head>
     <body>
         
