--- a/my_html.html
+++ b/my_html.html
@@ -14,17 +14,17 @@ title: experiment
         <link rel = "stylesheet" type = "text/css", href = "..">
 
         <!--react import-->
-        <script src="https://unpkg.com/react@^16/umd/react.production.min.js"></script>
+        <!-- <script src="https://unpkg.com/react@^16/umd/react.production.min.js"></script>
         <script src="https://unpkg.com/react-dom@16.13.0/umd/react-dom.production.min.js"></script>
-        <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
-
+        <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script> -->
+        
+        <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
         <!--babel import-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
     </head>
     <body>
         
