--- a/my_html2.html
+++ b/my_html2.html
@@ -6,8 +6,7 @@
 function Clock(props) {
     return (
         <div>
-        <h1>Hello, world!</h1>
-        <h2>It is {props.date.toLocaleTimeString()}.</h2>
+        <h2>Current local time is {props.date.toLocaleTimeString()}.</h2>
         </div>
     );
 }
